--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -2,7 +2,6 @@
 
 .about {
  
-
     padding: 160px 0 80px 0;
     
     .container {
@@ -22,6 +21,7 @@
 
             .about--card {
                 width: 250px;
+                margin-bottom: 1.25rem;
                 display: flex;
                 flex-direction: column;
                 align-items: flex-start;
